	1737 Ixion's_Wings		When attackingm chance to gain 7% ASPD for 7 seconds. Occurance raises with refine rate..
	1541 Nemesis			When attacking, chance to gain ATK + 50 for 20 seconds, chance to increase damage against demon and dark element monsters by 10%.
	13034 Desert_Twilight		Small chance to activate max Attack Speed for 7 seconds.

=======================
10/05
	* Updated gender restrictions to aegis [Playtester]
	- it will still be ignored by eA due to a config setting
	* Removed gender restrictions on all equips [Playtester]
	- official servers don't have gender restrictions implemented, although they have it in their db files
	- Wedding Dress doesn't display Wedding sprite anymore (females and males can fight with it)
10/04
	* Added SC_EXPBOOST (Field Manual), SC_ITEMBOOST (Bubble Gum) to const.txt. Allready working [Zephyrus]
	- Added SC_LIFEINSURANCE and SC_BOSSMAPINFO (not implemented)
	- Updated Field Manual and Bubble Gum in the itemdb.txt file.
10/01
	* Fixed Frigg combo not reducing def by refine rate [Playtester]
	* Reverted the bug that was added in the last update [Playtester]
	- official script clearly says 30%
	- please don't update db files without official source
09/30
	* Fixed Gemini-S58 Card [Paradox924X]
	- It now 50% resistance to Petrification and Sleep when Vit is 80 or above instead of 30% resistance.
09/29
	* Fixed "Heat" and "Crimson Fire Formation" [Playtester]
	- they now do 'unlimited' hits per second (same as firewall)
09/28
	* Fixed Victorious Coronet thanks to Pinky and $ephiroth [Playtester]
	* Added 11.2 gun drops [Playtester]
	* Rev. 11327 Removed slots from Gusli, and commented it out. kRO doesn't support this item. [L0ne_W0lf]
	- Removed slots from Chinese_Handicraft and Arrest Handcuffs.
09/27
	* Rev. 11321 Added constants for Summer Outfit and updated the Summer_Event_Suit item script. [L0ne_W0lf]
	* Rev. 11319 Re-added an ETC item that got lost in the item update. (7062) [L0ne_W0lf]